--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <p>This is a paragraph</p>
+    <p>This is a 2nd paragraph.</p>
 </body>
+
 </html>
